Generation with latest EMF