@@ -5,9 +5,9 @@
 **  are made available under the terms of the Eclipse Public License v2.0
 **  which accompanies this distribution, and is available at
 **  https://www.eclipse.org/legal/epl-v20.html
-** 
+**
 **  This file is part of the RiseClipse tool
-**  
+**
 **  Contributors:
 **      Computer Science Department, CentraleSupélec
 **      EDF R&D
@@ -91,7 +91,7 @@ public class ReportControlImpl extends ControlWithTriggerOptImpl implements Repo
      * @generated
      * @ordered
      */
-    protected static final Integer BUF_TIME_EDEFAULT = new Integer( 0 );
+    protected static final Integer BUF_TIME_EDEFAULT = Integer.valueOf( 0 );
 
     /**
      * The cached value of the '{@link #getBufTime() <em>Buf Time</em>}' attribute.
