@@ -5,9 +5,9 @@
 **  are made available under the terms of the Eclipse Public License v2.0
 **  which accompanies this distribution, and is available at
 **  https://www.eclipse.org/legal/epl-v20.html
-** 
+**
 **  This file is part of the RiseClipse tool
-**  
+**
 **  Contributors:
 **      Computer Science Department, CentraleSupélec
 **      EDF R&D
@@ -56,7 +56,7 @@ public class SettingControlImpl extends UnNamingImpl implements SettingControl {
      * @generated
      * @ordered
      */
-    protected static final Integer ACT_SG_EDEFAULT = new Integer( 1 );
+    protected static final Integer ACT_SG_EDEFAULT = Integer.valueOf( 1 );
 
     /**
      * The cached value of the '{@link #getActSG() <em>Act SG</em>}' attribute.
